--- a/html/mainPages/extra.html
+++ b/html/mainPages/extra.html
@@ -15,6 +15,12 @@
     <link rel="stylesheet" href="../../css/style.css" />
 </head>
 <body>
+    <div class="header">
+        <a href="aboutMe.html">about me</a>
+        <a href="compSci.html">computer science</a>
+        <a href="uxuiDev.html">ux/ui development</a>
+        <a href="extra.html">extra</a>
+    </div>
     
 </body>
 </html>
