--- a/html/mainPages/aboutMe.html
+++ b/html/mainPages/aboutMe.html
@@ -47,13 +47,13 @@
             fields as possible.
         </p>
     </div>
-    <div id="resume">
-        <div id="Misc1">
+    <div class="resume" id="resume">
+        <div class="Misc1">
             <h3>
                 Education
             </h3>
             <p>
-                Drexel University
+                Drexel University <br>
                 Bachelor of Science in Computer Science <br>
                 Minor in User Experience & Interactive Design<br>
                 Dean’s List: Fall Term 2018 • A.J. Drexel Scholarship: 2018-Present<br>
@@ -75,7 +75,7 @@
                 TypeScript, React, Unix
             </p>
         </div>
-        <div id="workExperience">
+        <div class="resumeWorkExperience">
             <h3>
                 Work Experience
             </h3>
@@ -143,7 +143,7 @@
                 <li>Top clients include Jo Malone, Tiffany & Co., and Architecture Digest</li>
             </ul>
         </div>
-        <div id="Misc2">
+        <div class="Misc2">
             <h3>
                 Relevant Coursework
             </h3>
