restructure into div with item class

--- a/html/mainPages/uxuiDev.html
+++ b/html/mainPages/uxuiDev.html
@@ -15,29 +15,37 @@
     <link rel="stylesheet" href="../../css/style.css" />
 </head>
 <body>
-    <div id="B&N">
-        <h3>
-           Barnes & Noble 
-        </h3>
-        <p>
-            For one of my first UX/UI design courses, we were asked to redesign an already existing site. I chose Barnes & Noble.
-        </p>
+    <div class="header">
+        <a href="aboutMe.html">about me</a>
+        <a href="compSci.html">computer science</a>
+        <a href="uxuiDev.html">ux/ui development</a>
+        <a href="extra.html">extra</a>
     </div>
-    <div id="Guardian">
-        <h3>
-           The Guardian
-        </h3>
-        <p>
-            This is a full redesign of the Guardian. While it strays from the Guardians original and classic look, it takes on more of a editorial approach.
-        </p>
-    </div>
-    <div id="Syzo">
-        <h3>
-           Syzokryli Dance Ensemble
-        </h3>
-        <p>
-            I developed this website using Wix. Using my own custom designs and ideas, this website is a redesign and update of the old Syzokyli website.
-        </p>
+    <div class="item">
+        <div id="B&N">
+            <h3>
+            Barnes & Noble 
+            </h3>
+            <p>
+                For one of my first UX/UI design courses, we were asked to redesign an already existing site. I chose Barnes & Noble.
+            </p>
+        </div>
+        <div id="Guardian">
+            <h3>
+            The Guardian
+            </h3>
+            <p>
+                This is a full redesign of the Guardian. While it strays from the Guardians original and classic look, it takes on more of a editorial approach.
+            </p>
+        </div>
+        <div id="Syzo">
+            <h3>
+            Syzokryli Dance Ensemble
+            </h3>
+            <p>
+                I developed this website using Wix. Using my own custom designs and ideas, this website is a redesign and update of the old Syzokyli website.
+            </p>
+        </div>
     </div>
 </body>
 </html>
