--- a/html/mainPages/compSci.html
+++ b/html/mainPages/compSci.html
@@ -15,45 +15,53 @@
     <link rel="stylesheet" href="../../css/style.css" />
 </head>
 <body>
-    <div id="Lynx">
-        <h3>
-            Lynx
-        </h3>
-        <p>
-            An iOS and Android app for digital business cards that allow users to share personal information using QR codes and relational databases to keep the information up to date. We called it Lynx.
-        </p>
+    <div class="header">
+        <a href="aboutMe.html">about me</a>
+        <a href="compSci.html">computer science</a>
+        <a href="uxuiDev.html">ux/ui development</a>
+        <a href="extra.html">extra</a>
     </div>
-    <div id="Class Connect">
-        <h3>
-            Class Connect
-        </h3>
-        <p>
-            Designed a learning interface for students ages 7-10 to use during COVID-19. This is targeted towards online learning and working from home.
-        </p>
-    </div>
-    <div id="Google Colab">
-        <h3>
-            Google Colabratory
-        </h3>
-        <p>
-            Created a plateform for sales representatives at Sapient Industries Inc. to use when querying data. This helped the process be more efficient and consise as the sales personelle could now directly make their own questions and calls to data.
-        </p>
-    </div>
-    <div id="Data Visualization">
-        <h3>
-            Data Visualization
-        </h3>
-        <p>
-            Working in Pandas, me and a co-worker developed a dashboard of visualizations. These graphs and images showed the progress of companies efficiency's as well as a visualization of when certain sockets had similar patterns that could be optimized for maximum savings.
-        </p>
-    </div>
-    <div id="The Big">
-        <h3>
-            The Big Project Idea
-        </h3>
-        <p>
-            Still in the works...
-        </p>
+    <div class="item">
+        <div id="Lynx">
+            <h3>
+                Lynx
+            </h3>
+            <p>
+                An iOS and Android app for digital business cards that allow users to share personal information using QR codes and relational databases to keep the information up to date. We called it Lynx.
+            </p>
+        </div>
+        <div id="Class Connect">
+            <h3>
+                Class Connect
+            </h3>
+            <p>
+                Designed a learning interface for students ages 7-10 to use during COVID-19. This is targeted towards online learning and working from home.
+            </p>
+        </div>
+        <div id="Google Colab">
+            <h3>
+                Google Colabratory
+            </h3>
+            <p>
+                Created a plateform for sales representatives at Sapient Industries Inc. to use when querying data. This helped the process be more efficient and consise as the sales personelle could now directly make their own questions and calls to data.
+            </p>
+        </div>
+        <div id="Data Visualization">
+            <h3>
+                Data Visualization
+            </h3>
+            <p>
+                Working in Pandas, me and a co-worker developed a dashboard of visualizations. These graphs and images showed the progress of companies efficiency's as well as a visualization of when certain sockets had similar patterns that could be optimized for maximum savings.
+            </p>
+        </div>
+        <div id="The Big">
+            <h3>
+                The Big Project Idea
+            </h3>
+            <p>
+                Still in the works...
+            </p>
+        </div>
     </div>
     
 </body>
