--- a/html/mainPages/uxuiDev.html
+++ b/html/mainPages/uxuiDev.html
@@ -15,11 +15,18 @@
     <link rel="stylesheet" href="../../css/style.css" />
 </head>
 <body>
-    <div class="header">
-        <a href="aboutMe.html">about me</a>
-        <a href="compSci.html">computer science</a>
-        <a href="uxuiDev.html">ux/ui development</a>
-        <a href="extra.html">extra</a>
+    <div class="navBar">
+        <div class="logo">
+            <h3>
+                SCT
+            </h3>
+        </div>
+        <div class="header">
+            <a href="aboutMe.html">about me</a>
+            <a href="compSci.html">computer science</a>
+            <a href="uxuiDev.html">ux/ui development</a>
+            <a href="extra.html">extra</a>
+        </div>
     </div>
     <div class="item">
         <div id="B&N">
