--- a/html/mainPages/extra.html
+++ b/html/mainPages/extra.html
@@ -15,6 +15,11 @@
     <link rel="stylesheet" href="../../css/style.css" />
 </head>
 <body>
+    <div class="logo">
+        <h3>
+            SCT
+        </h3>
+    </div>
     <div class="header">
         <a href="aboutMe.html">about me</a>
         <a href="compSci.html">computer science</a>
