about me - complete
the whole "about me" page is now fully styled with font type, spacing, and color

--- a/html/mainPages/aboutMe.html
+++ b/html/mainPages/aboutMe.html
@@ -15,12 +15,17 @@
     <link rel="stylesheet" href="../../css/style.css" />
 </head>
 <body>
-    <div class="header">
-        <a href="aboutMe.html">about me</a>
-        <a href="compSci.html">computer science</a>
-        <a href="uxuiDev.html">ux/ui development</a>
-        <a href="extra.html">extra</a>
-    </div>
+    <button class="menu">
+        <a href="#navigateHere">menu</a>
+    </button>
+    <!-- <nav>
+        <ul>
+            <li><a href="aboutMe.html" class="active">about me</a></li>
+            <li><a href="compSci.html">computer science</a></li>
+            <li><a href="uxuiDev.html">ux/ui development</a></li>
+            <li><a href="extra.html">extra</a></li>
+        </ul>
+    </nav> -->
     <div class="title" id="header">
         <h1>
             SOFIA C. TASKER
@@ -56,7 +61,8 @@
                 Drexel University <br>
                 Bachelor of Science in Computer Science <br>
                 Minor in User Experience & Interactive Design<br>
-                Dean’s List: Fall Term 2018 • A.J. Drexel Scholarship: 2018-Present<br>
+                Dean’s List: Fall Term 2018 <br>
+                A.J. Drexel Scholarship: 2018-Present<br>
                 Anticipated Graduation: June 2022<br>
                 Cumulative GPA: 3.42<br>
             </p>
@@ -181,5 +187,13 @@
             </p>
         </div>
     </div>
+    <nav id ="navigateHere">
+        <ul>
+            <li><a href="aboutMe.html" class="active">about me</a></li>
+            <li><a href="compSci.html">computer science</a></li>
+            <li><a href="uxuiDev.html">ux/ui development</a></li>
+            <li><a href="extra.html">extra</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
