--- a/html/mainPages/aboutMe.html
+++ b/html/mainPages/aboutMe.html
@@ -30,6 +30,11 @@
         <h3>
             About Me
         </h3>
+        <img
+            src="../../images/sct56_headshot.png"
+            alt="headshot"
+            class="responsive"
+        />
         <p>
             Life is full of opportunities, and I want to experience as many of them as I can.<br>
             I am a senior Computer Science major at Drexel University with a minor in User Experience and Interactive Design. 
