extra page done
added images and captions

--- a/html/mainPages/extra.html
+++ b/html/mainPages/extra.html
@@ -8,17 +8,48 @@
     <link rel="stylesheet" href="../../css/style.css" />
 </head>
 <body>
-    <div class="logo">
-        <h3>
-            SCT
-        </h3>
+    <button class="menu">
+        <a href="#navigateHere">menu</a>
+    </button>
+    <div class="title" id="header">
+        <h1>
+            SOFIA C. TASKER
+        </h1>
+        <h2>
+            UX/UI Developer & Designer
+        </h2>
     </div>
-    <div class="header">
-        <a href="aboutMe.html">about me</a>
-        <a href="compSci.html">computer science</a>
-        <a href="uxuiDev.html">ux/ui development</a>
-        <a href="extra.html">extra</a>
-    </div>
-    
+    <figure>
+        <img 
+            src="../../images/extra/joMalone.jpeg"
+            alt="Jo Malone Image"
+            class="responsive"
+        />
+        <figcaption>Jo Malone London (Featured Paper Magnolias)</figcaption>
+    </figure>
+    <figure>
+        <img 
+            src="../../images/extra/tiffany.jpeg"
+            alt="Tiffany & Co. Image"
+            class="responsive"
+        />
+        <figcaption>Instagram Ad for Tiffany & Co. (Featured Paper Butterflies)</figcaption>
+    </figure>
+    <figure>
+        <img 
+            src="../../images/extra/architecture.jpeg"
+            alt="Architectural Digest Image"
+            class="responsive"
+        />
+        <figcaption>Architectural Digest (Featured Origami)</figcaption>
+    </figure>
+    <nav id ="navigateHere">
+        <ul>
+            <li><a href="aboutMe.html" class="active">about me</a></li>
+            <li><a href="compSci.html">computer science</a></li>
+            <li><a href="uxuiDev.html">ux/ui development</a></li>
+            <li><a href="extra.html">extra</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
