add basic structure and fix paths

--- a/html/mainPages/extra.html
+++ b/html/mainPages/extra.html
@@ -45,10 +45,10 @@
     </figure>
     <nav id ="navigateHere">
         <ul>
-            <li><a href="aboutMe.html" class="active">about me</a></li>
+            <li><a href="aboutMe.html">about me</a></li>
             <li><a href="compSci.html">computer science</a></li>
             <li><a href="uxuiDev.html">ux/ui development</a></li>
-            <li><a href="extra.html">extra</a></li>
+            <li><a href="extra.html" class="active">extra</a></li>
         </ul>
     </nav>
 </body>
