--- a/html/mainPages/uxuiDev.html
+++ b/html/mainPages/uxuiDev.html
@@ -73,9 +73,9 @@
     </div>
     <nav id ="navigateHere">
         <ul>
-            <li><a href="aboutMe.html" class="active">about me</a></li>
+            <li><a href="aboutMe.html">about me</a></li>
             <li><a href="compSci.html">computer science</a></li>
-            <li><a href="uxuiDev.html">ux/ui development</a></li>
+            <li><a href="uxuiDev.html" class="active">ux/ui development</a></li>
             <li><a href="extra.html">extra</a></li>
         </ul>
     </nav>
