--- a/html/subPages/googleColab.html
+++ b/html/subPages/googleColab.html
@@ -8,6 +8,40 @@
     <link rel="stylesheet" href="../../css/style.css" />
 </head>
 <body>
-    
+    <button class="menu">
+        <a href="#navigateHere">menu</a>
+    </button>
+    <div class="title" id="header">
+        <h1>
+            SOFIA C. TASKER
+        </h1>
+        <h2>
+            UX/UI Developer & Designer
+        </h2>
+    </div>
+    <div>
+        <h3>
+            Google Colabratory
+        </h3>
+        <p>
+            Created a plateform for sales representatives at Sapient Industries Inc. 
+            to use when querying data. This helped the process be more efficient 
+            and consise as the sales personelle could now directly make their own 
+            questions and calls to data.
+        </p>
+        <img
+            src="../../images/"
+            alt=" Image"
+            class="responsive"
+        />
+    </div>
+    <nav id ="navigateHere">
+        <ul>
+            <li><a href="../mainPages/aboutMe.html">about me</a></li>
+            <li><a href="../mainPages/compSci.html">computer science</a></li>
+            <li><a href="../mainPages/uxuiDev.html">ux/ui development</a></li>
+            <li><a href="../mainPages/extra.html">extra</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
