--- a/html/subPages/incentiveEngagement.html
+++ b/html/subPages/incentiveEngagement.html
@@ -8,6 +8,43 @@
     <link rel="stylesheet" href="../../css/style.css" />
 </head>
 <body>
-    
+    <button class="menu">
+        <a href="#navigateHere">menu</a>
+    </button>
+    <div class="title" id="header">
+        <h1>
+            SOFIA C. TASKER
+        </h1>
+        <h2>
+            UX/UI Developer & Designer
+        </h2>
+    </div>
+    <div>
+        <h3>
+            Incentive Engagement
+        </h3>
+        <p>
+            Incentive Engagement is a microservice that implements a gamification system 
+            for the Incentive app. It will allow users earn points for tasks such as 
+            completing challenges, reading articles, or linking bank accounts. Users can 
+            then redeem points to earn prizes like gift cards, and will be able to compete 
+            with others in the global leaderboards. This microservice further encourages 
+            users to engage with the app through daily streaks and quizzes that only 
+            appear for a limited amount of time.
+        </p>
+        <img
+            src="../../images/"
+            alt=" Image"
+            class="responsive"
+        />
+    </div>
+    <nav id ="navigateHere">
+        <ul>
+            <li><a href="../mainPages/aboutMe.html">about me</a></li>
+            <li><a href="../mainPages/compSci.html">computer science</a></li>
+            <li><a href="../mainPages/uxuiDev.html">ux/ui development</a></li>
+            <li><a href="../mainPages/extra.html">extra</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
