--- a/html/subPages/syzokryli.html
+++ b/html/subPages/syzokryli.html
@@ -8,6 +8,39 @@
     <link rel="stylesheet" href="../../css/style.css" />
 </head>
 <body>
-    
+    <button class="menu">
+        <a href="#navigateHere">menu</a>
+    </button>
+    <div class="title" id="header">
+        <h1>
+            SOFIA C. TASKER
+        </h1>
+        <h2>
+            UX/UI Developer & Designer
+        </h2>
+    </div>
+    <div>
+        <h3>
+            Syzokyli Dance Ensemble
+        </h3>
+        <p>
+            I developed this website using Wix. Using my own custom designs 
+            and ideas, this website is a redesign and update of the old 
+            Syzokyli website.
+        </p>
+        <img
+            src="../../images/"
+            alt=" Image"
+            class="responsive"
+        />
+    </div>
+    <nav id ="navigateHere">
+        <ul>
+            <li><a href="../mainPages/aboutMe.html">about me</a></li>
+            <li><a href="../mainPages/compSci.html">computer science</a></li>
+            <li><a href="../mainPages/uxuiDev.html">ux/ui development</a></li>
+            <li><a href="../mainPages/extra.html">extra</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
