--- a/html/subPages/barnesNoble.html
+++ b/html/subPages/barnesNoble.html
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="../../css/style.css" />
 </head>
 <body>
-    
+    <button class="menu">
+        <a href="#navigateHere">menu</a>
+    </button>
+    <div class="title" id="header">
+        <h1>
+            SOFIA C. TASKER
+        </h1>
+        <h2>
+            UX/UI Developer & Designer
+        </h2>
+    </div>
+    <div>
+        <h3>
+            Barnes & Noble
+        </h3>
+        <p>
+            For one of my first UX/UI design courses, we were asked to redesign 
+            an already existing site. I chose Barnes & Noble.
+        </p>
+        <img
+            src="../../images/"
+            alt=" Image"
+            class="responsive"
+        />
+    </div>
+    <nav id ="navigateHere">
+        <ul>
+            <li><a href="../mainPages/aboutMe.html">about me</a></li>
+            <li><a href="../mainPages/compSci.html">computer science</a></li>
+            <li><a href="../mainPages/uxuiDev.html">ux/ui development</a></li>
+            <li><a href="../mainPages/extra.html">extra</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
