barnes&noble page done

--- a/html/subPages/barnesNoble.html
+++ b/html/subPages/barnesNoble.html
@@ -28,8 +28,13 @@
             an already existing site. I chose Barnes & Noble.
         </p>
         <img
-            src="../../images/"
-            alt=" Image"
+            src="../../images/barnesNoble/homepage.jpeg"
+            alt="B&N Hompage Image"
+            class="responsive"
+        />
+        <img
+            src="../../images/barnesNoble/internal.jpeg"
+            alt="B&N Internal Image"
             class="responsive"
         />
     </div>
