class connect done

--- a/html/subPages/classConnect.html
+++ b/html/subPages/classConnect.html
@@ -28,8 +28,28 @@
             This is targeted towards online learning and working from home.
         </p>
         <img
-            src="../../images/"
-            alt=" Image"
+            src="../../images/classConnect/homepage.png"
+            alt="Hompage Image"
+            class="responsive"
+        />
+        <img
+            src="../../images/classConnect/TeacherComments.png"
+            alt="Comments Image"
+            class="responsive"
+        />
+        <img
+            src="../../images/classConnect/calendar.png"
+            alt="Calendar Image"
+            class="responsive"
+        />
+        <img
+            src="../../images/classConnect/teacherChat.png"
+            alt="Chat Image"
+            class="responsive"
+        />
+        <img
+            src="../../images/classConnect/tutors.png"
+            alt="Tutors Image"
             class="responsive"
         />
     </div>
