--- a/html/subPages/lynx.html
+++ b/html/subPages/lynx.html
@@ -28,11 +28,13 @@
             personal information using QR codes and relational databases to keep the 
             information up to date. We called it Lynx.
         </p>
-        <img
-            src="../../images/"
-            alt=" Image"
+        <video
+            controls
+            autoplay
             class="responsive"
-        />
+            poster="../../images/lynx/CoverLynx.png">
+                <source src="../../images/lynx/lynxDemo.mp4" type="video/mp4" />
+        </video>
     </div>
     <nav id ="navigateHere">
         <ul>
