incentive engagement done

--- a/html/subPages/incentiveEngagement.html
+++ b/html/subPages/incentiveEngagement.html
@@ -32,9 +32,12 @@
             users to engage with the app through daily streaks and quizzes that only 
             appear for a limited amount of time.
         </p>
+        <p>
+            Incentive Engagement is still in the works, come back for an Final update in the Summer!
+        </p>
         <img
-            src="../../images/"
-            alt=" Image"
+            src="../../images/emoney/coverIncentive.png"
+            alt="Incentive Engagement Image"
             class="responsive"
         />
     </div>
