data visulization done

--- a/html/subPages/dataVisulization.html
+++ b/html/subPages/dataVisulization.html
@@ -30,8 +30,8 @@
             patterns that could be optimized for maximum savings.
         </p>
         <img
-            src="../../images/"
-            alt=" Image"
+            src="../../images/dataVis/exampleMonday.png"
+            alt="Data Monday Image"
             class="responsive"
         />
     </div>
