--- a/html/subPages/googleColab.html
+++ b/html/subPages/googleColab.html
@@ -30,8 +30,8 @@
             questions and calls to data.
         </p>
         <img
-            src="../../images/"
-            alt=" Image"
+            src="../../images/colab/CoverColab.jpeg"
+            alt="Google Colab Image"
             class="responsive"
         />
     </div>
