--- a/html/subPages/syzokryli.html
+++ b/html/subPages/syzokryli.html
@@ -28,9 +28,30 @@
             and ideas, this website is a redesign and update of the old 
             Syzokyli website.
         </p>
+        <a href="http://syzokryli.org/">Visit the full website here!</a>
         <img
-            src="../../images/"
-            alt=" Image"
+            src="../../images/syzo/hopepage.png"
+            alt="Syzo Homepage Image"
+            class="responsive"
+        />
+        <img
+            src="../../images/syzo/about.png"
+            alt="Syzo About Image"
+            class="responsive"
+        />
+        <img
+            src="../../images/syzo/leaders.png"
+            alt="Syzo Leaders Image"
+            class="responsive"
+        />
+        <img
+            src="../../images/syzo/gallery.png"
+            alt="Syzo Gallery Image"
+            class="responsive"
+        />
+        <img
+            src="../../images/syzo/camps.png"
+            alt="Syzo Camps Image"
             class="responsive"
         />
     </div>
