rename aboutme --> index.html

--- a/html/subPages/barnesNoble.html
+++ b/html/subPages/barnesNoble.html
@@ -40,7 +40,7 @@
     </div>
     <nav id ="navigateHere">
         <ul>
-            <li><a href="../mainPages/aboutMe.html">about me</a></li>
+            <li><a href="../mainPages/index.html">about me</a></li>
             <li><a href="../mainPages/compSci.html">computer science</a></li>
             <li><a href="../mainPages/uxuiDev.html">ux/ui development</a></li>
             <li><a href="../mainPages/extra.html">extra</a></li>
