--- a/html/mainPages/compSci.html
+++ b/html/mainPages/compSci.html
@@ -113,7 +113,7 @@
     </div>
     <nav id ="navigateHere">
         <ul>
-            <li><a href="aboutMe.html">about me</a></li>
+            <li><a href="index.html">about me</a></li>
             <li><a href="compSci.html" class="active">computer science</a></li>
             <li><a href="uxuiDev.html">ux/ui development</a></li>
             <li><a href="extra.html">extra</a></li>
