--- a/html/mainPages/extra.html
+++ b/html/mainPages/extra.html
@@ -45,7 +45,7 @@
     </figure>
     <nav id ="navigateHere">
         <ul>
-            <li><a href="aboutMe.html">about me</a></li>
+            <li><a href="index.html">about me</a></li>
             <li><a href="compSci.html">computer science</a></li>
             <li><a href="uxuiDev.html">ux/ui development</a></li>
             <li><a href="extra.html" class="active">extra</a></li>
