fix <a> tag links font

--- a/html/subPages/syzokryli.html
+++ b/html/subPages/syzokryli.html
@@ -28,7 +28,7 @@
             and ideas, this website is a redesign and update of the old 
             Syzokyli website.
         </p>
-        <a href="http://syzokryli.org/">Visit the full website here!</a>
+        <a href="http://syzokryli.org/">Website still in the works. Visit the full website here in a month!</a>
         <img
             src="../../images/syzo/hopepage.png"
             alt="Syzo Homepage Image"
