add page headers
Added page headers and change the color scheme pattern as a result

--- a/html/mainPages/compSci.html
+++ b/html/mainPages/compSci.html
@@ -18,13 +18,16 @@
         <h2>
             UX/UI Developer & Designer
         </h2>
+        <h3 class="pageTitle">
+            Computer Science Work 
+        </h3>
     </div>
     <div class="item">
         <div class="Lynx">
             <a href="../subPages/lynx.html">
-                <h3>
+                <h4>
                     Lynx
-                </h3>
+                </h4>
                 <img
                     src="../../images/lynx/CoverLynx.png"
                     alt="Lynx Cover Image"
@@ -39,9 +42,9 @@
         </div>
         <div class="Class Connect">
             <a href="../subPages/classConnect.html">
-                <h3>
+                <h4>
                     Class Connect
-                </h3>
+                </h4>
                 <img
                     src="../../images/classConnect/CoverClassConnect.jpeg"
                     alt="Class Connect Cover Image"
@@ -55,9 +58,9 @@
         </div>
         <div class="Google Colab">
             <a href="../subPages/googleColab.html">
-                <h3>
+                <h4>
                     Google Colabratory
-                </h3>
+                </h4>
                 <img
                     src="../../images/colab/CoverColab.jpeg"
                     alt="Colab Cover Image"
@@ -73,9 +76,9 @@
         </div>
         <div class="Data Visualization">
             <a href="../subPages/dataVisulization.html">
-                <h3>
+                <h4>
                     Data Visualization
-                </h3>
+                </h4>
                 <img
                     src="../../images/dataVis/CoverDataVis.png"
                     alt="Data Visualization Cover Image"
@@ -91,9 +94,9 @@
         </div>
         <div class="emoney">
             <a href="../subPages/incentiveEngagement.html">
-                <h3>
+                <h4>
                     Incentive Engagement
-                </h3>
+                </h4>
                 <img
                     src="../../images/emoney/coverIncentive.png"
                     alt="Lynx Cover Image"
