--- a/html/mainPages/extra.html
+++ b/html/mainPages/extra.html
@@ -18,6 +18,9 @@
         <h2>
             UX/UI Developer & Designer
         </h2>
+        <h3 class="pageTitle">
+            Featured Work 
+        </h3>
     </div>
     <figure>
         <img 
