--- a/html/mainPages/uxuiDev.html
+++ b/html/mainPages/uxuiDev.html
@@ -18,13 +18,16 @@
         <h2>
             UX/UI Developer & Designer
         </h2>
+        <h3 class="pageTitle">
+            Design Work 
+        </h3>
     </div>
     <div class="item">
         <div class="B&N">
             <a href="../subPages/barnesNoble.html">
-                <h3>
+                <h4>
                 Barnes & Noble 
-                </h3>
+                </h4>
                 <img
                     src="../../images/barnesNoble/coverBarnesNoble.png"
                     alt="B&N Cover Image"
@@ -38,9 +41,9 @@
         </div>
         <div class="Guardian">
             <a href="../subPages/guardian.html">
-                <h3>
+                <h4>
                 The Guardian
-                </h3>
+                </h4>
                 <img
                     src="../../images/guardian/coverGuardian.png"
                     alt="Guardian Cover Image"
@@ -55,9 +58,9 @@
         </div>
         <div class="Syzo">
             <a href="../subPages/syzokryli.html">
-                <h3>
+                <h4>
                 Syzokryli Dance Ensemble
-                </h3>
+                </h4>
                 <img
                     src="../../images/syzo/syzoLogo.png"
                     alt="Syzokryli Cover Image"
